Got makefile working by commenting out opencv for now

--- a/assignments/assignment1/huffman/Makefile
+++ b/assignments/assignment1/huffman/Makefile
@@ -7,8 +7,8 @@ INCLUDEDIR=include
 SRCDIR=src
 OBJDIR=objs
 
-OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv`
-OPENCV_LIBS = `pkg-config --libs opencv`
+#OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv`
+#OPENCV_LIBS = `pkg-config --libs opencv`
 
 LIBS=-lc $(OPENCV_LIBS)
 
