clenaing up directories before submission

--- a/assignments/2_assignment2/3_matMult/Makefile
+++ b/assignments/2_assignment2/3_matMult/Makefile
@@ -9,7 +9,7 @@ CXXFLAGS=-O1
 BUILD_DIR := build/
 
 # What binary are we trying to build?
-BIN := matMultTest 
+BIN := bin/matMultTest 
 
 # C++ source files
 CXXSRCS := $(wildcard src/*.cxx)
