--- a/assignments/2_assignment2/1_lab_pynq_basics/Makefile
+++ b/assignments/2_assignment2/1_lab_pynq_basics/Makefile
@@ -9,7 +9,7 @@ CXXFLAGS=-O1
 BUILD_DIR := build/
 
 # What binary are we trying to build?
-BIN := vectest
+BIN := bin/vectest
 
 # C++ source files
 CXXSRCS := $(wildcard src/*.cxx)
