neon sobel filter implemented

--- a/assignments/3_assignment3/sobel/Makefile
+++ b/assignments/3_assignment3/sobel/Makefile
@@ -1,5 +1,6 @@
 CXX?=g++
-CXXFLAGS=-O1 -ftree-vectorize -std=c++11 -mfpu=neon
+CXXFLAGS=-O1 -ftree-vectorize -std=c++11 -mfpu=neon -pg
+#CXXFLAGS=-O2 -std=c++11 -mfpu=neon -pg
 
 EXEC=hw3
 
