added writeup for jeston part of lab 3

--- a/labs/lab3/lab3_pynq/Makefile
+++ b/labs/lab3/lab3_pynq/Makefile
@@ -1,32 +1,42 @@
 CXX?=g++
 
 #o0
-#CXXFLAGS=-O0 -std=c++11 -mfpu=neon -pg
-#EXEC= builds/o0/lab3_fir_o0
+CXXFLAGS=-O0 -std=c++11 
+EXEC= ./lab3_fir_o0
 
 #o1
-#CXXFLAGS=-O1 -std=c++11 -mfpu=neon -pg
-#EXEC=builds/o1/lab3_fir_o1
+#CXXFLAGS=-O1 -std=c++11 -pg
+#EXEC= ./lab3_fir_o1
 
 #o2
-#CXXFLAGS=-O2 -std=c++11 -mfpu=neon -pg
-#EXEC=builds/o2/lab3_fir_o2
+#CXXFLAGS=-O2 -std=c++11 -pg
+#EXEC= ./lab3_fir_o2
 
 #o3
-#CXXFLAGS=-O3 -std=c++11 -mfpu=neon -pg
-#EXEC=builds/o3/lab3_fir_o3
+#CXXFLAGS=-O3 -std=c++11 -pg
+#EXEC= ./lab3_fir_o3
 
 #ofast
-CXXFLAGS=-Ofast -std=c++11 -mfpu=neon -pg
-EXEC=builds/ofast/lab3_fir_ofast
-
+#CXXFLAGS=-Ofast -std=c++11 -pg
+#EXEC= ./lab3_fir_ofast
 
 INCLUDEDIR=include
 SRCDIR=src
 OBJDIR=objs
 
-OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv`
-OPENCV_LIBS = `pkg-config --libs opencv`
+OPENCV_VERSION := $(shell pkg-config --modversion opencv4)
+
+ifeq "$(OPENCV_VERSION)" "4.1.1"
+	OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv4`
+	OPENCV_LIBS = `pkg-config --libs opencv4`
+	CXXFLAGS += -DOPENCV4
+else
+	OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv`
+	OPENCV_LIBS = `pkg-config --libs opencv`
+endif
+
+#OPENCV_INCLUDE_PATH = `pkg-config --cflags opencv`
+#OPENCV_LIBS = `pkg-config --libs opencv`
 
 LIBS=-lc $(OPENCV_LIBS)
 
