completed a4 Sobel_CPU function

--- a/assignments/3_assignment3/sobel/Makefile
+++ b/assignments/3_assignment3/sobel/Makefile
@@ -1,5 +1,6 @@
 CXX?=g++
-CXXFLAGS= -o -O1 -ftree-vectorize -std=c++11 -mfpu=neon -pg --coverage
+#CXXFLAGS= -o -O1 -ftree-vectorize -std=c++11 -mfpu=neon -pg --coverage
+CXXFLAGS= -o -O1 -ftree-vectorize -std=c++11 -pg 
 #CXXFLAGS=-O2 -std=c++11 -mfpu=neon -pg
 
 EXEC=hw3
